--- a/Ingenio.PortalWebExterno/Views/Account/Login.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Account/Login.cshtml
@@ -147,13 +147,13 @@
                                 @*<label><strong> * Confirme</strong></label>*@
                                 <div class="radio">
                                     <label>
-                                        <input class="radioPersona" type="radio" value="1" name="tipo" checked="checked" ">
+                                        <input class="radioPersona" type="radio" value="1" name="tipo" checked="checked">
                                         Soy una Persona natural
                                     </label>
                                 </div>
                                 <div class="radio">
                                     <label>
-                                        <input class="radioPersona" type="radio" value="2" name="tipo" ">
+                                        <input class="radioPersona" type="radio" value="2" name="tipo">
                                         Soy una Empresa
                                     </label>
                                 </div>
