--- a/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
@@ -39,6 +39,7 @@
         <div class="card-Form-Personal">
             <div class="content">
                 <div class="front">
+                    <img src="~/img/cofiahorrito.png" alt="Alternate Text" />
                     FORMULARIO PERSONA NATURAL
                 </div>
                 <div class="back">
@@ -59,6 +60,7 @@
         <div class="card-Form-Personal">
             <div class="content">
                 <div class="front">
+                    <img src="~/img/Img_Web2/cofijunior_tarjeta.png" alt="Alternate Text" />
                     FORMULARIO COFIJUNIOR
                 </div>
                 <div class="back">
@@ -79,7 +81,8 @@
         <div class="card-Form-Personal">
             <div class="content">
                 <div class="front">
-                    Formulario COFIAHORRITO
+                    <div class="img__tarjeta__formulario"><img src="~/img/cofiahorrito.jpg" alt="Alternate Text" /></div>
+                    <p>Formulario COFIAHORRITO</p>
                 </div>
                 <div class="back">
                     <span> Para niñas y niños menores de 14 años, una cuenta de ahorros de fácil apertura, con acceso a fondos sociales en solo tres pasos</span>
@@ -99,9 +102,10 @@
         <div class="card-Form-Personal">
             <div class="content">
                 <div class="front">
-                    Formulario PERSONA JURIDICA
+                    <div class="img__tarjeta__formulario2"><img src="~/img/Img_Web2/empresario.png" alt="Alternate Text" /></div>
+                    <p>Formulario PERSONA JURIDICA</p>
                 </div>
-                <div class="back">
+                <div class="back carta_juridica">
                     <span>
                         El ahorro es una reserva económica que se hace en el presente para ser utilizada en el futuro.
                     </span>
