--- a/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
@@ -48,9 +48,9 @@
             <div class="pago_opciones">
                 <h3>PSE</h3>
                 <p>
-                    This....
+                    !Ahorra tiempo realizando tus pagos a través del Botón PSE!
                 </p>
-                <button id="pse" class="myButtons control_pago">Ingresa</button>
+                <a class="myButtons" href="~/pdf_pagos/PSE-1.pdf" target="_blank">Conoce más</a>
             </div>
         </div>
         <div class="pagos__items">
@@ -58,9 +58,9 @@
             <div class="pago_opciones">
                 <h3>APP RED COOPCENTRA</h3>
                 <p>
-                    This....
+                    Sabes cuales son los canales donde puedes realizar transacciones sin tarjeta?
                 </p>
-                <button id="app_coopcentral" class="myButtons control_pago">Ingresa</button>
+                <a class="myButtons" href="~/pdf_pagos/Sin-Tarjeta-1.pdf" target="_blank">Conoce más</a>
             </div>
         </div>
         <div class="pagos__items">
@@ -70,7 +70,7 @@
                 <p>
                     Sabías qué puedes realizar retiros,consignaciones y recaudo en más de 8.000 puntos Efecty a nivel nacional.
                 </p>
-                <button id="efecty" class="myButtons control_pago">Ingresa</button>
+                <a class="myButtons" href="~/pdf_pagos/Efecty-1.pdf" target="_blank">Conoce más</a>
             </div>
         </div>
         <div class="pagos__items">
@@ -78,9 +78,9 @@
             <div class="pago_opciones">
                 <h3>Transferencia</h3>
                 <p>
-                    This....
+                    Conoce las funcionalidades de la Aplicación Móvil
                 </p>
-                <button id="trans" class="myButtons control_pago">Ingresa</button>
+                <a class="myButtons" href="~/pdf_pagos/Funcionalidades-App-1.pdf" target="_blank">Conoce más</a>
             </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
         <img src="~/img/Img_Web2/pagos/Efecty-3.jpg" alt="Alternate Text" />
 
     </div>
-    <div class="caroosles_de_imagenes container_prin">
+    <div class="caroosles_de_imagenes container__seccion">
         <div class="wrapper">
             <div id="Carusel" class="my-slider">
                 <img src="~/img/Img_Web2/pagos/Efecty-1.jpg" alt="Alternate Text" />
@@ -137,7 +137,7 @@
             </div>
         </div>
     </div>
-    @*<div class="caroosles_de_imagenes container_prin">
+    @*<div class="caroosles_de_imagenes container__seccion">
         <div class="wrapper">
             <div id="Carusel" class="my-slider">
                 <div><img class="imagen-slider" src="~/img/Img_Web2/1.jpg"></div>
@@ -169,19 +169,6 @@
         <div class="imagen_Google">GOOGLE MAPS</div>
     </div>
 </dialog>
-
-<div class="caroosles_de_imagenes container_prin">
-    <div class="wrapper">
-        <div id="Carusel" class="my-slider">
-            <img src="~/img/Img_Web2/pagos/Efecty-1.jpg" alt="Alternate Text" />
-            <div><img class="imagen-slider" src="~/img/Img_Web2/2.jpg"></div>
-            <div><img class="imagen-slider" src="~/img/Img_Web2/3.jpg"></div>
-            <div><img class="imagen-slider" src="~/img/Img_Web2/4.jpg"></div>
-            <div><img class="imagen-slider" src="~/img/Img_Web2/5.jpg"></div>
-            <div><img class="imagen-slider" src="~/img/Img_Web2/6.jpg"></div>
-        </div>
-    </div>
-</div>
 
 
 @*<script>
