--- a/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
@@ -8,15 +8,15 @@
 }
 
 @*<script type="text/javascript">
-    var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
-    window.smartsupp || (function (d) {
-        var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-        s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-        c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-        c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-    })(document);
-</script>*@
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
+        window.smartsupp || (function (d) {
+            var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
+            s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
+            c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
+            c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
+        })(document);
+    </script>*@
 
 <!-- estilo contenido -->
 <style>
@@ -28,9 +28,9 @@
         -moz-box-shadow: 3px 6px 37px 4px rgba(0,0,0,0.75);
         box-shadow: 3px 6px 37px 4px rgba(0,0,0,0.75);
     }
+
     #heading-breadcrumbs {
         background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/background_multi.jpg) center;
-
         padding: 60px 0;
         /* margin-bottom: 40px; */
     }
@@ -56,15 +56,19 @@
     .text-justify {
         font-size: 18px;
     }
+
     .mb-2 {
         margin-bottom: 2em;
     }
+
     .mb-4 {
         margin-bottom: 4em;
     }
+
     .p-2 {
         padding: 1.5em;
     }
+
     .row-flex {
         display: flex;
         justify-content: center;
@@ -172,50 +176,33 @@
 
 <section class="container__multi">
     @*<div class="container__header_multi">
-        <h3>Portal Transaccional</h3>
-        <p>Realice transacciones de forma facil y segura</p>
-    </div>*@
+            <h3>Portal Transaccional</h3>
+            <p>Realice transacciones de forma facil y segura</p>
+        </div>*@
     <div class="container__main__multi">
-            <h2>Persona Natural</h2>
+
+        <h2 class="tituleAnimation">Persona Natural</h2>
+
         <div class="big__container__multi">
-            <div class="container_personaNatural">
-                <i class="fa-solid fa-computer"></i>
-                <div>
-                    <h4>Portal <br /> Transaccional</h4>
-                    <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117"
-                       class="myButtons">Ingresar</a>
-                </div>
-            </div>
-            <div class="container_personaNatural">
-                <i class="fa-regular fa-address-card"></i>
-                <div>
-                    <h4>Si no es usuario en el <br />portal transaccional</h4>
-                    <a href="https://multiportal.redcoopcentral.com/integracion/multiportal/Enrolamiento/?entidad=00000117"
-                       class="myButtons">Regístrese aquí.</a>
-                </div>
-            </div>
+            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                <img src="~/img/Img_Web2/portal_tarjeta_persona.png" alt="Alternate Text" />
+            </a>
+            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                <img src="~/img/Img_Web2/registrarse_portal.png" alt="Alternate Text" />
+            </a>
         </div>
-            <h2>Persona Juridica</h2>
-        <div class="big__container__multi">
-            <div class="container_personaNatural">
-                <i class="fa-solid fa-computer"></i>
-                <div>
-                    <h4>Portal <br /> Transaccional</h4>
-                    <a href="https://portaljuridico.redcoopcentral.com:8445/portalJuridico"
-                       class="myButtons">Ingresar</a>
-                </div>
-            </div>
-            <div class="container_personaNatural">
-                <i class="fa-regular fa-address-card"></i>
-                <div>
-                    <h4>Si no es usuario en el <br />portal transaccional</h4>
-                    <a href="https://portaljuridico.redcoopcentral.com:8445/integracionJuridico/multiportal/enrolamiento/?entidad=00000117"
-                       class="myButtons">Regístrese aquí.</a>
-                </div>
-            </div>
+        <h2 class="tituleAnimation">Persona Juridica</h2>
+        <div class="big__container__multi">                                                                                                                           
+            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                <img src="~/img/Img_Web2/portal_tarjeta.png" alt="Alternate Text" />
+            </a>
+            <a href="https://multiportal.redcoopcentral.com/multiportalvisio/Login/Index?ENTIDAD=00000117" target="_blank">
+                <img src="~/img/Img_Web2/registrarse_portal_juridica.png" alt="Alternate Text" />
+            </a>
         </div>
     </div>
 </section>
+
 
 <section style=" margin-bottom: 0px;display:none">
     <div align="center">
@@ -284,10 +271,10 @@
 
         </div>
     </div>
-    </section>
-    <div class="container-fluid" style="margin-bottom: -6px;">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,64L60,90.7C120,117,240,171,360,165.3C480,160,600,96,720,101.3C840,107,960,181,1080,181.3C1200,181,1320,107,1380,69.3L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
-    </div>
+</section>
+<div class="container-fluid" style="margin-bottom: -6px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(252,132,4,0.9)" fill-opacity="1" d="M0,64L60,90.7C120,117,240,171,360,165.3C480,160,600,96,720,101.3C840,107,960,181,1080,181.3C1200,181,1320,107,1380,69.3L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+</div>
 <style>
     .maps iframe {
         pointer-events: none;
