--- a/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
@@ -125,7 +125,9 @@
                             Lunes a Viernes: 8:00 am a 12:00 meridiano – 2:00 pm a 5:00 pm Sábado: 8:00 am a 2:00 pm Jornada Continua
                         </p>
                         <div class="imagen_Google">
-                            <iframe class="img2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.9160578226433!2d-77.28225128580804!3d1.2185285623241011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2ed487375d6129%3A0x75d762a9f2c9e3da!2sCOFINAL!5e0!3m2!1ses!2sit!4v1454678597238" frameborder="0" style="border: 0;" allowfullscreen></iframe>
+                            @*<iframe class="img2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.9160578226433!2d-77.28225128580804!3d1.2185285623241011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e2ed487375d6129%3A0x75d762a9f2c9e3da!2sCOFINAL!5e0!3m2!1ses!2sit!4v1454678597238" frameborder="0" style="border: 0;" allowfullscreen></iframe>*@
+                            
+                            <iframe src="@agencia.Mapas" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </dialog>
