--- a/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
@@ -35,7 +35,7 @@
                     <img src="~/img/logo_cofinal_white.png" class="image-cofinal-white" />
                 </div>
                 <section class="col-12 col-md-5 Politicas">
-                    <a href="~/Formatos/FORMATOS POLITICA/Politicas_T_DP.pdf">
+                    <a href="~/Formatos/FORMATOS POLITICA/Politicas_T_DP.pdf" target="_blank">
                         Tratamiendo de datos Personales
                     </a>
                     @*<div>Politicas del sitio</div>*@
