--- a/Ingenio.PortalWebExterno/Content/sass/pages/FormulariosAC.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/FormulariosAC.scss
@@ -3,7 +3,6 @@
 
 
 .big__container__FA {
-    margin: 20px;
 
     .container__cards_FA {
         margin:30px;
@@ -19,6 +18,12 @@
     position: relative;
     width: 400px;
     height: 500px;
+
+    @media screen and (max-width:400px ) {
+        &.carta_juridica {
+            height: 600px;
+        }
+    }
     /*perspective: 500px;*/
     .content {
         position: absolute;
@@ -34,8 +39,7 @@
             position: absolute;
             height: 100%;
             width: 100%;
-            background: linear-gradient(45deg, $primary-color 0%, 
-            $secondary-color 100%);
+            background: linear-gradient(45deg, $primary-color 0%, $secondary-color 100%);
             /*line-height: 300px;*/
             color: #fff;
             text-align: center;
@@ -46,8 +50,29 @@
         .front {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-evenly;
             font-size: 30px;
+            flex-direction: column;
+
+            .img__tarjeta__formulario2 {
+                height: 300px;
+                width: 80%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .img__tarjeta__formulario {
+                height: 300px;
+                width: 100%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
         }
 
         .back {
@@ -55,12 +80,16 @@
             align-items: center;
             justify-content: space-evenly;
             flex-direction: column;
-            font-size: 15px;
+            font-size: 14px;
             background: #fff;
             color: black;
             transform: rotateY( 180deg );
             border-top: 3px solid $primary-color;
             /*border-left: 1px solid $primary-color;*/
+
+            .carta__contenido {
+                /*max-height:100%;*/
+            }
 
             ul, span {
                 margin: 0 40px;
