--- a/Ingenio.PortalWebExterno/Content/sass/pages/_canalesPago.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_canalesPago.scss
@@ -47,15 +47,25 @@
     }
 
     .pagos__items {
-        /*border: 1px solid red;*/
+        /*border: 1px solid $primary-color;*/
+        border-radius: 20px;
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: flex-end;
         align-items: center;
         width: 100%;
+        border: 1px solid rgba(211, 211, 211, 0.75);
+        /*box-shadow: 0px 15px 15px -20px $sombras-color;*/
+        color: #fff;
 
         .pago_opciones {
+            border-radius: 0px 20px 20px 0;
             background: $third-color;
+
+            p {
+                font-size: 1.6rem;
+                text-align:justify;
+            }
         }
 
 
@@ -68,10 +78,11 @@
                 // height: 200px;
                 /*background: red;*/
                 width: 200px;
-                margin: 0 30px 0 0;
+
 
                 img {
-                    width: 100%;
+                    width: 80%;
+                    margin: auto;
                 }
             }
 
@@ -90,11 +101,12 @@
 
         @media screen and (max-width: 699px) {
             max-width: 400px;
-            height: 300px;
+            height: 360px;
 
             .container__img {
                 display: flex;
                 /*border: 1px solid blue;*/
+                padding: 20px;
                 flex: 1;
                 width: 100%;
                 height: 150px;
@@ -119,6 +131,7 @@
                 align-items: center;
                 border-radius: 0 0 10px 10px;
                 /*border: 1px solid green;*/
+                padding: 10px;
             }
         }
     }
