--- a/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_multiportal.scss
@@ -37,10 +37,14 @@
             flex-direction: column;
             max-width: 900px;
             margin: auto;
+            gap: 20px;
+
+            h2{
+                margin-top:30px;
+            }
 
             @media screen and (min-width: 700px) {
                 flex-direction: row;
-                gap: 20px;
             }
 
             .container_personaNatural {
